# c3d

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  LICENSE  QUICKSTART.md  README.md  deploy-full.sh  deploy.sh  pyproject.toml  samconfig.toml  step_to_stl.py  template.yaml
.aws-sam/: build.toml
.aws-sam/cache/46a8f0ea-c28c-4d8c-85f3-30fa274fa0ea/: app.py
.github/: SETUP.md
.github/workflows/: ci.yaml  deploy-aws.yaml  release.yaml
backend/: .gitignore  README.md  deploy.sh  template.yaml
backend/api/: app.py  requirements.txt
backend/c3d/: Dockerfile  app.py  bootstrap.sh  converter.py  main.py  requirements.txt
backend/src/c3d/: __init__.py
backend/tests/: README.md  pytest.ini  requirements-test.txt  test_app_unit.py  test_conversion.py  test_converter_integration.py  test_e2e.py
backend/tests/test_assets/: example.step  sample.3mf  sample.iges
c3d/: main.py
docs/: AWS_DEPLOYMENT.md  REQUIREMENTS-PHASE-I.md  REQUIREMENTS-PHASE-II.md  REQUIREMENTS-PHASE-III.md  REQUIREMENTS-PHASE-IV.md
frontend/: .env  deploy.sh  index.html  package-lock.json  package.json
frontend/public/: sitemap.xml
frontend/src/: App.css  App.tsx  globalStyles.ts  index.css  theme.ts  useDarkMode.ts
tests/: test_conversion.py
tests/test_assets/: sample.step
