[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c3d"
version = "0.1.0"
description = "A 3D file conversion tool."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your@email.com" },
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cadquery",
    "trimesh",
    "networkx",
    "lxml",
]

[project.scripts]
c3d = "c3d.main:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
    "pre-commit",
]
